--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ out
 .DS_Store
 .DS_Store
 Cpp-Project.xcodeproj/project.xcworkspace/xcuserdata/jewonoh.xcuserdatad/UserInterfaceState.xcuserstate
+.DS_Store
+*.xcuserstate
+*.xcbkptlist
